@@ -1,3 +1,7 @@
+2006-06-21 Mathieu Blondel <mblondel@users.sourceforge.net>
+
+- Fixed bug that prevented from adding a new article.
+
 2006-06-11 Mathieu Blondel <mblondel@users.sourceforge.net>
 
 - Updated site.
